Fixing problem where waterfall's SVG would disappear when dialog opened.  `.waterfall:100vh` rule did not really work because the dialog inserts a `modal-open` style onto the body element which causes `overflow:hidden` which was what made the contents disappear.

--- a/www/waterfall_view/src/styles/styles.less
+++ b/www/waterfall_view/src/styles/styles.less
@@ -1,6 +1,17 @@
 @navbar-height: 52px;
 @main-color: #3498db;
 
+// Waterfall requires height:100%, otherwise nothing appears.
+// The controller dynamically adds and removes this class to body
+//   when entering and leaving Waterfall.
+//
+//  (note: adding height:100vh to .waterfall div also would solve this problem 
+//   except that causes the dialogs to make the SVG disappear due to 
+//   the dialog setting the body to overflow:hidden via modal-open rule.)
+body.waterfall {
+  height: 100%;
+}
+
 .waterfall {
   position: absolute;
   top: @navbar-height;
@@ -10,7 +21,6 @@
   width: auto;
   overflow-x: auto;
   overflow-y: hidden;
-  height: 100vh;
 
   .load-indicator {
     position: fixed;
